Тесты ,Обнова,Испрправление ошыбок

--- a/test-login.html
+++ b/test-login.html
@@ -16,8 +16,8 @@
     <div id="result"></div>
 
     <script>
-        const supabaseUrl = 'https://mcdhnxkzsbcifsaijieu.supabase.co';
-        const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im1jZGhueGt6c2JjaWZzYWlqaWV1Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTc4ODEwOTAsImV4cCI6MjA3MzQ1NzA5MH0.njdhv1MANZ0K1EFTsfAl61F38aVxspkgtbNo2GGZUYY';
+        const supabaseUrl = 'https://ctxzbhofvttxhvxjaise.supabase.co';
+        const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImN0eHpiaG9mdnR0eGh2eGphaXNlIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTgyMTQ0ODQsImV4cCI6MjA3Mzc5MDQ4NH0.poxWRH3PvsTSX2cW4EP9QAT6VxleRav-d4qwh81tlUo';
         
         const supabase = window.supabase.createClient(supabaseUrl, supabaseKey);
         
